Fix alignment issues between the 'panel' and 'show/hide' css

--- a/_includes/scss/design-patterns/_panels.scss
+++ b/_includes/scss/design-patterns/_panels.scss
@@ -6,11 +6,11 @@
 @mixin panel($background-colour: $grey-95){
   background-color: $background-colour;
   margin: 1em -1em 1.5em -1em;
-  padding: 0.25em 1em 0.25em 1em;
+  padding: 1em 1em 0.25em 1em;
 
   /* Reset top-margin for elements that appear at the top of panels */
   *:first-child{
-    margin-top: 0.5em;
+    margin-top: 0em;
   }
 
   /* Bring in bulleted lists, so the bullets get sufficient space */
