--- a/_includes/scss/design-patterns/_show-hide.scss
+++ b/_includes/scss/design-patterns/_show-hide.scss
@@ -21,8 +21,8 @@
 @mixin details-and-summary($background-colour: "") {
   details{
     display: block;
-    margin:  0 -1em 1em -1em;
-    padding-left: 1em;
+    @include panel(transparent);
+    margin: 0 -1em 0 -1em;
     summary{
       @include core-19;
       color: #2E3191;
@@ -30,12 +30,14 @@
       display: block;
       text-decoration: underline;
       margin-bottom: 0.5em;
-      margin-top: 0.15em;
+      margin-top: 0.2em;
       &:hover{ color: #1D97FF; }
-      &:focus{ outline: none; }
+      &:focus{
+        background-color: #FFBF47;
+        outline: 3px solid #FFBF47;
+      };
     }
     &[open]{
-      padding: 0.7em 1em 1em 1em;
       @if ($background-colour != ""){
         @if ($background-colour == "highlighted"){
           // Default panel colour
@@ -45,7 +47,8 @@
           @include panel($background-colour);
         }
       }
-      margin-top: -0.7em;
+      margin: 0 -1em 0 -1em;
+      summary:focus{ outline: none; background-color: transparent; }
     }
 
 
